fdo#74709 RTF import: implement RTF_CLPAD*

(cherry picked from commit 6b5ef795ed4a56195bf09633b03e88474f0b133c)

Conflicts:
	sw/qa/extras/rtfexport/rtfexport.cxx

Change-Id: I482735e3fc4091be983b2c7484e086f5d0dd283a
Reviewed-on: https://gerrit.libreoffice.org/8056
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>